crates/alder-can/src/snapshots/alder_can__canonicalize__tests__associated_equality_rejects_ambiguous_associated_names.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "trait First[a] { type Item }\ntrait Second[a] { type Item }\nfn bad(value: a) where a: First + Second, a.Item == Number { value }\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 3,
                column: 45,
            },
            end: Position {
                line: 3,
                column: 49,
            },
        },
        kind: Type(
            AmbiguousAssocType {
                name: "Item",
                traits: [
                    TraitId(
                        QualifiedName {
                            module: ModuleId {
                                package: Application,
                                path: [],
                            },
                            name: "First",
                        },
                    ),
                    TraitId(
                        QualifiedName {
                            module: ModuleId {
                                package: Application,
                                path: [],
                            },
                            name: "Second",
                        },
                    ),
                ],
            },
        ),
    },
]
