crates/alder-can/src/snapshots/alder_can__canonicalize__tests__associated_equality_requires_a_matching_bound.snap
---
source: crates/alder-can/src/canonicalize.rs
expression: "can_error(indoc::indoc!\n{r#\"\n            trait Iterator[i] { type Item }\n            trait Show[a] { fn show(value: a) -> String }\n            fn bad(value: i) where i: Show, i.Item == Number { value }\n        \"#})"
---
[
    Error {
        region: Region {
            start: Position {
                line: 3,
                column: 35,
            },
            end: Position {
                line: 3,
                column: 39,
            },
        },
        kind: Type(
            UnknownAssocType {
                name: "Item",
            },
        ),
    },
]
