crates/alder-can/src/snapshots/alder_can__canonicalize__tests__async_block_cannot_break_outer_loop.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "fn make() { loop { async { break 42 } } }"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 28,
            },
            end: Position {
                line: 1,
                column: 36,
            },
        },
        kind: Stmt(
            BreakOutsideLoop,
        ),
    },
]
