crates/alder-can/src/snapshots/alder_can__canonicalize__tests__await_requires_explicit_task_return_in_m2.snap
---
source: crates/alder-can/src/canonicalize.rs
expression: "can_error(\"fn wait() { Task.sleep(1).await }\")"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 13,
            },
            end: Position {
                line: 1,
                column: 32,
            },
        },
        kind: Expr(
            AwaitRequiresTaskReturn,
        ),
    },
]
