crates/alder-can/src/snapshots/alder_can__canonicalize__tests__colon_bound_requires_a_unary_trait.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "trait Convert[a, b] { fn convert(value: a) -> b }\nfn bad(value: a) where a: Convert { value }\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 27,
            },
            end: Position {
                line: 2,
                column: 34,
            },
        },
        kind: Type(
            BadArity {
                name: "Convert",
                expected: 2,
                actual: 1,
            },
        ),
    },
]
