crates/alder-can/src/snapshots/alder_can__canonicalize__tests__conditional_use_provider_does_not_escape_its_branch.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "type Session = { user: String }\nfn read(flag: Bool) { if flag { use Session }\nSession.user }"
---
[
    Error {
        region: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 3,
                column: 8,
            },
        },
        kind: Pattern(
            Name(
                Unknown {
                    namespace: Constructor,
                    qualifier: None,
                    name: "Session",
                    suggestions: [],
                },
            ),
        ),
    },
]
